[package]
name = "magnetite"
version = "0.0.1"
authors = ["Matěj Pavel <matejpavel@hotmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tracing-subscriber = "0.3"
